# full_stack_todo_app

backend_todo/taskTrack_todo/: .env  README.md  pyproject.toml
backend_todo/taskTrack_todo/app/: main.py  settings.py
